feat: integrate and refine Mind Memory system v1.0
- Renamed memory tools to 'remember' (Graphiti) and 'journal_memory_*' (Local JS)
- Implemented strict recall protocol in system prompt
- Added GraphService.getStory() and fixed session compaction build error
- Updated documentation and tool policy groups
- Initialized Mind v1.0 Modular architecture with Docker support

--- a/.gitignore
+++ b/.gitignore
@@ -60,7 +60,10 @@ apps/ios/*.dSYM.zip
 
 # provisioning profiles (local)
 apps/ios/*.mobileprovision
+# Credentials and Environment
 .env
+auth-profiles.json
+.env.lab
 
 # Local untracked files
 .local/
@@ -68,6 +71,11 @@ apps/ios/*.mobileprovision
 IDENTITY.md
 USER.md
 .tgz
+STORY_TEST.md
+/memory/
+/memory-old/
+*.log
 
 # local tooling
 .serena/
+MISSION_CONTROL.md
