--- a/package.json
+++ b/package.json
@@ -153,7 +153,8 @@
     "@agentclientprotocol/sdk": "0.13.1",
     "@aws-sdk/client-bedrock": "^3.980.0",
     "@buape/carbon": "0.14.0",
-    "@clack/prompts": "^1.0.0",
+    "@clack/prompts": "^0.11.0",
+    "@getzep/zep-js": "^2.0.2",
     "@grammyjs/runner": "^2.0.3",
     "@grammyjs/transformer-throttler": "^1.2.1",
     "@homebridge/ciao": "^1.3.4",
