--- a/extensions/mind-memory/package.json
+++ b/extensions/mind-memory/package.json
@@ -4,7 +4,7 @@
   "description": "Advanced narrative memory and subconscious resonance via Graphiti",
   "main": "dist/index.js",
   "type": "module",
-  "moltbot": {
+  "openclaw": {
     "extensions": ["../../dist/plugins/mind-memory/index.js"]
   },
   "dependencies": {
